--- a/input.css
+++ b/input.css
@@ -2,6 +2,7 @@
 
 @theme {
     --font-poppins: Poppins, sans-serif;
+    --color-gray-opaque: rgba(100,100,100,.9);
 }
 
 @layer utilities {
@@ -16,5 +17,11 @@
   }
   .nav-items {
     @apply font-extralight px-5 uppercase cursor-pointer hover:underline;
+  }
+  .blog-paragrapghs {
+    @apply mb-4 last:mb-0 font-extralight;
+  }
+  .blog-dates {
+    @apply mb-6 font-light;
   }
 }
