--- a/output.css
+++ b/output.css
@@ -378,6 +378,7 @@
       --font-mono--font-variation-settings
     );
     --font-poppins: Poppins, sans-serif;
+    --color-gray-opaque: rgba(100,100,100,.9);
   }
 }
 @layer base {
@@ -576,6 +577,12 @@
   .ms-\[-1px\] {
     margin-inline-start: -1px;
   }
+  .mt-4 {
+    margin-top: calc(var(--spacing) * 4);
+  }
+  .mt-6 {
+    margin-top: calc(var(--spacing) * 6);
+  }
   .mt-8 {
     margin-top: calc(var(--spacing) * 8);
   }
@@ -585,8 +592,17 @@
   .mr-2 {
     margin-right: calc(var(--spacing) * 2);
   }
+  .mb-1 {
+    margin-bottom: calc(var(--spacing) * 1);
+  }
+  .mb-2 {
+    margin-bottom: calc(var(--spacing) * 2);
+  }
   .mb-4 {
     margin-bottom: calc(var(--spacing) * 4);
+  }
+  .mb-6 {
+    margin-bottom: calc(var(--spacing) * 6);
   }
   .mb-8 {
     margin-bottom: calc(var(--spacing) * 8);
@@ -612,8 +628,8 @@
   .h-40 {
     height: calc(var(--spacing) * 40);
   }
-  .h-90 {
-    height: calc(var(--spacing) * 90);
+  .h-fit {
+    height: fit-content;
   }
   .h-full {
     height: 100%;
@@ -621,8 +637,17 @@
   .h-screen {
     height: 100vh;
   }
+  .max-h-\[500px\] {
+    max-height: 500px;
+  }
   .max-h-\[600px\] {
     max-height: 600px;
+  }
+  .max-h-\[650px\] {
+    max-height: 650px;
+  }
+  .max-h-\[750px\] {
+    max-height: 750px;
   }
   .w-1\/3 {
     width: calc(1/3 * 100%);
@@ -648,11 +673,17 @@
   .max-w-\[700px\] {
     max-width: 700px;
   }
+  .max-w-\[800px\] {
+    max-width: 800px;
+  }
   .grow {
     flex-grow: 1;
   }
   .cursor-pointer {
     cursor: pointer;
+  }
+  .grid-rows-\[repeat\(1fr\,1fr\)\] {
+    grid-template-rows: repeat(1fr,1fr);
   }
   .flex-col {
     flex-direction: column;
@@ -687,6 +718,9 @@
   .overflow-x-auto {
     overflow-x: auto;
   }
+  .rounded-2xl {
+    border-radius: var(--radius-2xl);
+  }
   .rounded-full {
     border-radius: calc(infinity * 1px);
   }
@@ -702,6 +736,14 @@
   .border {
     border-style: var(--tw-border-style);
     border-width: 1px;
+  }
+  .border-2 {
+    border-style: var(--tw-border-style);
+    border-width: 2px;
+  }
+  .border-4 {
+    border-style: var(--tw-border-style);
+    border-width: 4px;
   }
   .border-t {
     border-top-style: var(--tw-border-style);
@@ -730,14 +772,20 @@
   .border-slate-200 {
     border-color: var(--color-slate-200);
   }
+  .border-slate-300 {
+    border-color: var(--color-slate-300);
+  }
+  .border-slate-400 {
+    border-color: var(--color-slate-400);
+  }
   .border-zinc-400 {
     border-color: var(--color-zinc-400);
   }
   .border-b-slate-200 {
     border-bottom-color: var(--color-slate-200);
   }
-  .bg-\[rgba\(100\,100\,100\,\.9\)\] {
-    background-color: rgba(100,100,100,.9);
+  .bg-gray-opaque {
+    background-color: var(--color-gray-opaque);
   }
   .bg-slate-50 {
     background-color: var(--color-slate-50);
@@ -753,6 +801,9 @@
   }
   .p-4 {
     padding: calc(var(--spacing) * 4);
+  }
+  .p-6 {
+    padding: calc(var(--spacing) * 6);
   }
   .p-10 {
     padding: calc(var(--spacing) * 10);
@@ -798,6 +849,10 @@
     font-size: var(--text-lg);
     line-height: var(--tw-leading, var(--text-lg--line-height));
   }
+  .text-sm {
+    font-size: var(--text-sm);
+    line-height: var(--tw-leading, var(--text-sm--line-height));
+  }
   .font-extralight {
     --tw-font-weight: var(--font-weight-extralight);
     font-weight: var(--font-weight-extralight);
@@ -810,11 +865,11 @@
     --tw-font-weight: var(--font-weight-thin);
     font-weight: var(--font-weight-thin);
   }
-  .text-gray-500 {
-    color: var(--color-gray-500);
-  }
   .text-slate-100 {
     color: var(--color-slate-100);
+  }
+  .text-yellow-900 {
+    color: var(--color-yellow-900);
   }
   .text-yellow-950 {
     color: var(--color-yellow-950);
@@ -825,6 +880,16 @@
   .italic {
     font-style: italic;
   }
+  .opacity-70 {
+    opacity: 70%;
+  }
+  .opacity-80 {
+    opacity: 80%;
+  }
+  .shadow {
+    --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
+    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
   .shadow-2xl {
     --tw-shadow: 0 25px 50px -12px var(--tw-shadow-color, rgb(0 0 0 / 0.25));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
@@ -833,16 +898,32 @@
     --tw-shadow: 0 10px 15px -3px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 4px 6px -4px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
+  .shadow-slate-500 {
+    --tw-shadow-color: var(--color-slate-500);
+  }
+  .blur {
+    --tw-blur: blur(8px);
+    filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
+  }
+  .transition-opacity {
+    transition-property: opacity;
+    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
+    transition-duration: var(--tw-duration, var(--default-transition-duration));
+  }
+  .duration-300 {
+    --tw-duration: 300ms;
+    transition-duration: 300ms;
+  }
   .last\:border-b-0 {
     &:last-child {
       border-bottom-style: var(--tw-border-style);
       border-bottom-width: 0px;
     }
   }
-  .hover\:underline {
+  .hover\:opacity-100 {
     &:hover {
       @media (hover: hover) {
-        text-decoration-line: underline;
+        opacity: 100%;
       }
     }
   }
@@ -861,14 +942,14 @@
       right: calc(var(--spacing) * 20);
     }
   }
+  .md\:mt-0 {
+    @media (width >= 48rem) {
+      margin-top: calc(var(--spacing) * 0);
+    }
+  }
   .md\:mr-20 {
     @media (width >= 48rem) {
       margin-right: calc(var(--spacing) * 20);
-    }
-  }
-  .md\:mr-40 {
-    @media (width >= 48rem) {
-      margin-right: calc(var(--spacing) * 40);
     }
   }
   .md\:mb-20 {
@@ -876,24 +957,9 @@
       margin-bottom: calc(var(--spacing) * 20);
     }
   }
-  .md\:mb-30 {
-    @media (width >= 48rem) {
-      margin-bottom: calc(var(--spacing) * 30);
-    }
-  }
   .md\:ml-40 {
     @media (width >= 48rem) {
       margin-left: calc(var(--spacing) * 40);
-    }
-  }
-  .md\:h-40 {
-    @media (width >= 48rem) {
-      height: calc(var(--spacing) * 40);
-    }
-  }
-  .md\:h-90 {
-    @media (width >= 48rem) {
-      height: calc(var(--spacing) * 90);
     }
   }
   .md\:h-\[200px\] {
@@ -901,39 +967,14 @@
       height: 200px;
     }
   }
-  .md\:h-\[400px\] {
+  .md\:h-\[550px\] {
     @media (width >= 48rem) {
-      height: 400px;
-    }
-  }
-  .md\:h-\[500px\] {
-    @media (width >= 48rem) {
-      height: 500px;
-    }
-  }
-  .md\:h-\[600px\] {
-    @media (width >= 48rem) {
-      height: 600px;
+      height: 550px;
     }
   }
   .md\:h-\[650px\] {
     @media (width >= 48rem) {
       height: 650px;
-    }
-  }
-  .md\:h-\[700px\] {
-    @media (width >= 48rem) {
-      height: 700px;
-    }
-  }
-  .md\:h-\[900px\] {
-    @media (width >= 48rem) {
-      height: 900px;
-    }
-  }
-  .md\:h-full {
-    @media (width >= 48rem) {
-      height: 100%;
     }
   }
   .md\:max-h-\[310px\] {
@@ -949,6 +990,11 @@
   .md\:w-8\/12 {
     @media (width >= 48rem) {
       width: calc(8/12 * 100%);
+    }
+  }
+  .md\:w-10\/12 {
+    @media (width >= 48rem) {
+      width: calc(10/12 * 100%);
     }
   }
   .md\:w-\[200\%\] {
@@ -1012,6 +1058,11 @@
       padding-top: calc(var(--spacing) * 40);
     }
   }
+  .md\:pt-60 {
+    @media (width >= 48rem) {
+      padding-top: calc(var(--spacing) * 60);
+    }
+  }
   .md\:pr-20 {
     @media (width >= 48rem) {
       padding-right: calc(var(--spacing) * 20);
@@ -1020,11 +1071,6 @@
   .md\:pb-10 {
     @media (width >= 48rem) {
       padding-bottom: calc(var(--spacing) * 10);
-    }
-  }
-  .md\:pb-30 {
-    @media (width >= 48rem) {
-      padding-bottom: calc(var(--spacing) * 30);
     }
   }
   .md\:text-8xl {
@@ -1042,12 +1088,6 @@
   .lg\:flex-row {
     @media (width >= 64rem) {
       flex-direction: row;
-    }
-  }
-  .\[\&\:not\(\:last-child\)\]\:border-b {
-    &:not(:last-child) {
-      border-bottom-style: var(--tw-border-style);
-      border-bottom-width: 1px;
     }
   }
 }
@@ -1070,6 +1110,19 @@
         text-decoration-line: underline;
       }
     }
+  }
+  .blog-paragrapghs {
+    margin-bottom: calc(var(--spacing) * 4);
+    --tw-font-weight: var(--font-weight-extralight);
+    font-weight: var(--font-weight-extralight);
+    &:last-child {
+      margin-bottom: calc(var(--spacing) * 0);
+    }
+  }
+  .blog-dates {
+    margin-bottom: calc(var(--spacing) * 6);
+    --tw-font-weight: var(--font-weight-light);
+    font-weight: var(--font-weight-light);
   }
 }
 @keyframes spin {
@@ -1161,4 +1214,44 @@
   syntax: "*";
   inherits: false;
   initial-value: 0 0 #0000;
+}
+@property --tw-blur {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-brightness {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-contrast {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-grayscale {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-hue-rotate {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-invert {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-opacity {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-saturate {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-sepia {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-duration {
+  syntax: "*";
+  inherits: false;
 }
