--- a/input.css
+++ b/input.css
@@ -2,7 +2,7 @@
 
 @theme {
     --font-poppins: Poppins, sans-serif;
-    --color-gray-opaque: rgba(100,100,100,.9);
+    --color-gray-opaque: rgba(100,100,100,.95);
 }
 
 @layer utilities {
@@ -23,5 +23,8 @@
   }
   .blog-dates {
     @apply mb-6 font-light;
+  }
+  .exhibition-calc {
+    height: calc(100% - 4px);
   }
 }
