--- a/output.css
+++ b/output.css
@@ -378,7 +378,7 @@
       --font-mono--font-variation-settings
     );
     --font-poppins: Poppins, sans-serif;
-    --color-gray-opaque: rgba(100,100,100,.9);
+    --color-gray-opaque: rgba(100,100,100,.95);
   }
 }
 @layer base {
@@ -547,8 +547,14 @@
   .left-0 {
     left: calc(var(--spacing) * 0);
   }
+  .z-10 {
+    z-index: 10;
+  }
   .z-20 {
     z-index: 20;
+  }
+  .z-30 {
+    z-index: 30;
   }
   .row-span-2 {
     grid-row: span 2 / span 2;
@@ -574,20 +580,17 @@
   .mx-auto {
     margin-inline: auto;
   }
+  .my-2 {
+    margin-block: calc(var(--spacing) * 2);
+  }
   .ms-\[-1px\] {
     margin-inline-start: -1px;
   }
-  .mt-4 {
-    margin-top: calc(var(--spacing) * 4);
-  }
-  .mt-6 {
-    margin-top: calc(var(--spacing) * 6);
+  .mt-2 {
+    margin-top: calc(var(--spacing) * 2);
   }
   .mt-8 {
     margin-top: calc(var(--spacing) * 8);
-  }
-  .mt-10 {
-    margin-top: calc(var(--spacing) * 10);
   }
   .mr-2 {
     margin-right: calc(var(--spacing) * 2);
@@ -597,12 +600,6 @@
   }
   .mb-2 {
     margin-bottom: calc(var(--spacing) * 2);
-  }
-  .mb-4 {
-    margin-bottom: calc(var(--spacing) * 4);
-  }
-  .mb-6 {
-    margin-bottom: calc(var(--spacing) * 6);
   }
   .mb-8 {
     margin-bottom: calc(var(--spacing) * 8);
@@ -625,11 +622,11 @@
   .h-2 {
     height: calc(var(--spacing) * 2);
   }
+  .h-20 {
+    height: calc(var(--spacing) * 20);
+  }
   .h-40 {
     height: calc(var(--spacing) * 40);
-  }
-  .h-fit {
-    height: fit-content;
   }
   .h-full {
     height: 100%;
@@ -639,12 +636,6 @@
   }
   .max-h-\[500px\] {
     max-height: 500px;
-  }
-  .max-h-\[600px\] {
-    max-height: 600px;
-  }
-  .max-h-\[650px\] {
-    max-height: 650px;
   }
   .max-h-\[750px\] {
     max-height: 750px;
@@ -667,9 +658,6 @@
   .w-full {
     width: 100%;
   }
-  .max-w-\[600px\] {
-    max-width: 600px;
-  }
   .max-w-\[700px\] {
     max-width: 700px;
   }
@@ -681,9 +669,6 @@
   }
   .cursor-pointer {
     cursor: pointer;
-  }
-  .grid-rows-\[repeat\(1fr\,1fr\)\] {
-    grid-template-rows: repeat(1fr,1fr);
   }
   .flex-col {
     flex-direction: column;
@@ -700,14 +685,17 @@
   .items-start {
     align-items: flex-start;
   }
+  .justify-around {
+    justify-content: space-around;
+  }
   .justify-between {
     justify-content: space-between;
   }
   .justify-center {
     justify-content: center;
   }
-  .gap-2 {
-    gap: calc(var(--spacing) * 2);
+  .gap-8 {
+    gap: calc(var(--spacing) * 8);
   }
   .gap-20 {
     gap: calc(var(--spacing) * 20);
@@ -717,9 +705,6 @@
   }
   .overflow-x-auto {
     overflow-x: auto;
-  }
-  .rounded-2xl {
-    border-radius: var(--radius-2xl);
   }
   .rounded-full {
     border-radius: calc(infinity * 1px);
@@ -736,14 +721,6 @@
   .border {
     border-style: var(--tw-border-style);
     border-width: 1px;
-  }
-  .border-2 {
-    border-style: var(--tw-border-style);
-    border-width: 2px;
-  }
-  .border-4 {
-    border-style: var(--tw-border-style);
-    border-width: 4px;
   }
   .border-t {
     border-top-style: var(--tw-border-style);
@@ -772,17 +749,14 @@
   .border-slate-200 {
     border-color: var(--color-slate-200);
   }
-  .border-slate-300 {
-    border-color: var(--color-slate-300);
-  }
-  .border-slate-400 {
-    border-color: var(--color-slate-400);
-  }
   .border-zinc-400 {
     border-color: var(--color-zinc-400);
   }
   .border-b-slate-200 {
     border-bottom-color: var(--color-slate-200);
+  }
+  .border-b-slate-300 {
+    border-bottom-color: var(--color-slate-300);
   }
   .bg-gray-opaque {
     background-color: var(--color-gray-opaque);
@@ -853,6 +827,10 @@
     font-size: var(--text-sm);
     line-height: var(--tw-leading, var(--text-sm--line-height));
   }
+  .text-xs {
+    font-size: var(--text-xs);
+    line-height: var(--tw-leading, var(--text-xs--line-height));
+  }
   .font-extralight {
     --tw-font-weight: var(--font-weight-extralight);
     font-weight: var(--font-weight-extralight);
@@ -883,9 +861,6 @@
   .opacity-70 {
     opacity: 70%;
   }
-  .opacity-80 {
-    opacity: 80%;
-  }
   .shadow {
     --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
@@ -897,9 +872,6 @@
   .shadow-lg {
     --tw-shadow: 0 10px 15px -3px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 4px 6px -4px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
-  .shadow-slate-500 {
-    --tw-shadow-color: var(--color-slate-500);
   }
   .blur {
     --tw-blur: blur(8px);
@@ -927,6 +899,11 @@
       }
     }
   }
+  .md\:absolute {
+    @media (width >= 48rem) {
+      position: absolute;
+    }
+  }
   .md\:fixed {
     @media (width >= 48rem) {
       position: fixed;
@@ -942,11 +919,6 @@
       right: calc(var(--spacing) * 20);
     }
   }
-  .md\:mt-0 {
-    @media (width >= 48rem) {
-      margin-top: calc(var(--spacing) * 0);
-    }
-  }
   .md\:mr-20 {
     @media (width >= 48rem) {
       margin-right: calc(var(--spacing) * 20);
@@ -955,6 +927,11 @@
   .md\:mb-20 {
     @media (width >= 48rem) {
       margin-bottom: calc(var(--spacing) * 20);
+    }
+  }
+  .md\:mb-32 {
+    @media (width >= 48rem) {
+      margin-bottom: calc(var(--spacing) * 32);
     }
   }
   .md\:ml-40 {
@@ -977,6 +954,16 @@
       height: 650px;
     }
   }
+  .md\:h-\[690px\] {
+    @media (width >= 48rem) {
+      height: 690px;
+    }
+  }
+  .md\:h-full {
+    @media (width >= 48rem) {
+      height: 100%;
+    }
+  }
   .md\:max-h-\[310px\] {
     @media (width >= 48rem) {
       max-height: 310px;
@@ -985,11 +972,6 @@
   .md\:w-1\/12 {
     @media (width >= 48rem) {
       width: calc(1/12 * 100%);
-    }
-  }
-  .md\:w-8\/12 {
-    @media (width >= 48rem) {
-      width: calc(8/12 * 100%);
     }
   }
   .md\:w-10\/12 {
@@ -1010,6 +992,11 @@
   .md\:rotate-270 {
     @media (width >= 48rem) {
       rotate: 270deg;
+    }
+  }
+  .md\:grid-cols-\[repeat\(10\,minmax\(250px\,1fr\)\)\] {
+    @media (width >= 48rem) {
+      grid-template-columns: repeat(10,minmax(250px,1fr));
     }
   }
   .md\:grid-cols-\[repeat\(11\,minmax\(250px\,1fr\)\)\] {
@@ -1058,14 +1045,19 @@
       padding-top: calc(var(--spacing) * 40);
     }
   }
-  .md\:pt-60 {
+  .md\:pt-50 {
     @media (width >= 48rem) {
-      padding-top: calc(var(--spacing) * 60);
+      padding-top: calc(var(--spacing) * 50);
     }
   }
   .md\:pr-20 {
     @media (width >= 48rem) {
       padding-right: calc(var(--spacing) * 20);
+    }
+  }
+  .md\:pr-24 {
+    @media (width >= 48rem) {
+      padding-right: calc(var(--spacing) * 24);
     }
   }
   .md\:pb-10 {
@@ -1123,6 +1115,9 @@
     margin-bottom: calc(var(--spacing) * 6);
     --tw-font-weight: var(--font-weight-light);
     font-weight: var(--font-weight-light);
+  }
+  .exhibition-calc {
+    height: calc(100% - 4px);
   }
 }
 @keyframes spin {
