--- a/output.css
+++ b/output.css
@@ -550,9 +550,6 @@
   .z-10 {
     z-index: 10;
   }
-  .z-20 {
-    z-index: 20;
-  }
   .z-30 {
     z-index: 30;
   }
@@ -588,9 +585,6 @@
   }
   .mt-2 {
     margin-top: calc(var(--spacing) * 2);
-  }
-  .mt-4 {
-    margin-top: calc(var(--spacing) * 4);
   }
   .mt-6 {
     margin-top: calc(var(--spacing) * 6);
@@ -637,12 +631,6 @@
   .h-4 {
     height: calc(var(--spacing) * 4);
   }
-  .h-10 {
-    height: calc(var(--spacing) * 10);
-  }
-  .h-20 {
-    height: calc(var(--spacing) * 20);
-  }
   .h-40 {
     height: calc(var(--spacing) * 40);
   }
@@ -685,6 +673,33 @@
   .grow {
     flex-grow: 1;
   }
+  .origin-\[2\%\] {
+    transform-origin: 2%;
+  }
+  .origin-\[4\%\] {
+    transform-origin: 4%;
+  }
+  .origin-\[5\%\] {
+    transform-origin: 5%;
+  }
+  .origin-\[6\%\] {
+    transform-origin: 6%;
+  }
+  .origin-\[8\%\] {
+    transform-origin: 8%;
+  }
+  .origin-\[60\%\] {
+    transform-origin: 60%;
+  }
+  .origin-center {
+    transform-origin: center;
+  }
+  .origin-left {
+    transform-origin: left;
+  }
+  .origin-right {
+    transform-origin: right;
+  }
   .cursor-pointer {
     cursor: pointer;
   }
@@ -712,11 +727,14 @@
   .justify-center {
     justify-content: center;
   }
+  .justify-end {
+    justify-content: flex-end;
+  }
+  .justify-start {
+    justify-content: flex-start;
+  }
   .gap-6 {
     gap: calc(var(--spacing) * 6);
-  }
-  .gap-8 {
-    gap: calc(var(--spacing) * 8);
   }
   .gap-20 {
     gap: calc(var(--spacing) * 20);
@@ -839,9 +857,6 @@
   .pb-4 {
     padding-bottom: calc(var(--spacing) * 4);
   }
-  .pb-6 {
-    padding-bottom: calc(var(--spacing) * 6);
-  }
   .font-poppins {
     font-family: var(--font-poppins);
   }
@@ -877,17 +892,9 @@
     font-size: var(--text-xs);
     line-height: var(--tw-leading, var(--text-xs--line-height));
   }
-  .font-bold {
-    --tw-font-weight: var(--font-weight-bold);
-    font-weight: var(--font-weight-bold);
-  }
   .font-extralight {
     --tw-font-weight: var(--font-weight-extralight);
     font-weight: var(--font-weight-extralight);
-  }
-  .font-light {
-    --tw-font-weight: var(--font-weight-light);
-    font-weight: var(--font-weight-light);
   }
   .font-medium {
     --tw-font-weight: var(--font-weight-medium);
@@ -963,14 +970,6 @@
       }
     }
   }
-  .hover\:shadow-lg {
-    &:hover {
-      @media (hover: hover) {
-        --tw-shadow: 0 10px 15px -3px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 4px 6px -4px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
-        box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-      }
-    }
-  }
   .md\:absolute {
     @media (width >= 48rem) {
       position: absolute;
@@ -1004,6 +1003,11 @@
   .md\:mr-20 {
     @media (width >= 48rem) {
       margin-right: calc(var(--spacing) * 20);
+    }
+  }
+  .md\:mr-52 {
+    @media (width >= 48rem) {
+      margin-right: calc(var(--spacing) * 52);
     }
   }
   .md\:mb-20 {
@@ -1061,6 +1065,41 @@
       width: auto;
     }
   }
+  .md\:origin-\[4\%\] {
+    @media (width >= 48rem) {
+      transform-origin: 4%;
+    }
+  }
+  .md\:origin-bottom {
+    @media (width >= 48rem) {
+      transform-origin: bottom;
+    }
+  }
+  .md\:origin-bottom-right {
+    @media (width >= 48rem) {
+      transform-origin: bottom right;
+    }
+  }
+  .md\:origin-left {
+    @media (width >= 48rem) {
+      transform-origin: left;
+    }
+  }
+  .md\:origin-right {
+    @media (width >= 48rem) {
+      transform-origin: right;
+    }
+  }
+  .md\:origin-top {
+    @media (width >= 48rem) {
+      transform-origin: top;
+    }
+  }
+  .md\:origin-top-left {
+    @media (width >= 48rem) {
+      transform-origin: top left;
+    }
+  }
   .md\:rotate-270 {
     @media (width >= 48rem) {
       rotate: 270deg;
@@ -1069,11 +1108,6 @@
   .md\:grid-cols-\[repeat\(10\,minmax\(250px\,1fr\)\)\] {
     @media (width >= 48rem) {
       grid-template-columns: repeat(10,minmax(250px,1fr));
-    }
-  }
-  .md\:grid-rows-\[minmax\(200px\,34vh\)_minmax\(200px\,34vh\)\] {
-    @media (width >= 48rem) {
-      grid-template-rows: minmax(200px,34vh) minmax(200px,34vh);
     }
   }
   .md\:grid-rows-\[minmax\(200px\,34vh\)_minmax\(200px\,35vh\)\] {
@@ -1089,6 +1123,11 @@
   .md\:justify-between {
     @media (width >= 48rem) {
       justify-content: space-between;
+    }
+  }
+  .md\:justify-normal {
+    @media (width >= 48rem) {
+      justify-content: normal;
     }
   }
   .md\:overflow-x-scroll {
@@ -1107,9 +1146,44 @@
       border-right-width: 1px;
     }
   }
+  .md\:pt-4 {
+    @media (width >= 48rem) {
+      padding-top: calc(var(--spacing) * 4);
+    }
+  }
+  .md\:pt-10 {
+    @media (width >= 48rem) {
+      padding-top: calc(var(--spacing) * 10);
+    }
+  }
   .md\:pt-20 {
     @media (width >= 48rem) {
       padding-top: calc(var(--spacing) * 20);
+    }
+  }
+  .md\:pt-24 {
+    @media (width >= 48rem) {
+      padding-top: calc(var(--spacing) * 24);
+    }
+  }
+  .md\:pt-26 {
+    @media (width >= 48rem) {
+      padding-top: calc(var(--spacing) * 26);
+    }
+  }
+  .md\:pt-28 {
+    @media (width >= 48rem) {
+      padding-top: calc(var(--spacing) * 28);
+    }
+  }
+  .md\:pt-32 {
+    @media (width >= 48rem) {
+      padding-top: calc(var(--spacing) * 32);
+    }
+  }
+  .md\:pt-36 {
+    @media (width >= 48rem) {
+      padding-top: calc(var(--spacing) * 36);
     }
   }
   .md\:pt-40 {
@@ -1117,9 +1191,39 @@
       padding-top: calc(var(--spacing) * 40);
     }
   }
+  .md\:pt-54 {
+    @media (width >= 48rem) {
+      padding-top: calc(var(--spacing) * 54);
+    }
+  }
+  .md\:pr-10 {
+    @media (width >= 48rem) {
+      padding-right: calc(var(--spacing) * 10);
+    }
+  }
   .md\:pr-20 {
     @media (width >= 48rem) {
       padding-right: calc(var(--spacing) * 20);
+    }
+  }
+  .md\:pr-28 {
+    @media (width >= 48rem) {
+      padding-right: calc(var(--spacing) * 28);
+    }
+  }
+  .md\:pr-56 {
+    @media (width >= 48rem) {
+      padding-right: calc(var(--spacing) * 56);
+    }
+  }
+  .md\:pr-60 {
+    @media (width >= 48rem) {
+      padding-right: calc(var(--spacing) * 60);
+    }
+  }
+  .md\:pr-80 {
+    @media (width >= 48rem) {
+      padding-right: calc(var(--spacing) * 80);
     }
   }
   .md\:pr-96 {
@@ -1132,9 +1236,24 @@
       padding-right: 1px;
     }
   }
+  .md\:pb-4 {
+    @media (width >= 48rem) {
+      padding-bottom: calc(var(--spacing) * 4);
+    }
+  }
   .md\:pb-10 {
     @media (width >= 48rem) {
       padding-bottom: calc(var(--spacing) * 10);
+    }
+  }
+  .md\:pb-54 {
+    @media (width >= 48rem) {
+      padding-bottom: calc(var(--spacing) * 54);
+    }
+  }
+  .md\:pl-54 {
+    @media (width >= 48rem) {
+      padding-left: calc(var(--spacing) * 54);
     }
   }
   .md\:text-8xl {
